--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -9,7 +9,7 @@
 
     <div class="header">
         <h1 class="main-heading">GUIDE</h1>
-        <img src="../static/images/logo.png" alt="IIT Jammu Logo" class="top-right-logo">
+        <img src="../static/images/logo.PNG" alt="IIT Jammu Logo" class="top-right-logo">
         <div class="input-box">
             <label for="start">Initial location:</label>
             <input type="number" id="start" min="1" max="18">
